--- a/index.html
+++ b/index.html
@@ -13,20 +13,19 @@
 
     <div class="noise-overlay">
         <svg 
-            viewBox="0 0 200 200"
             xmlns='http://www.w3.org/2000/svg'>
 
             <filter id='noiseFilter'>
                 <feTurbulence 
                 type='fractalNoise' 
-                baseFrequency='8' 
+                baseFrequency='1' 
                 numOctaves='3' 
                 stitchTiles='stitch' />
             </filter>
 
             <rect
                 width='100%' 
-                height='100%' 
+                height='100vh' 
                 filter='url(#noiseFilter)' />
             </svg>
     </div>
