--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
         </div>
 
         <div class="model-wrapper">
-            <model-viewer class="model-viewer" alt="3D Model" src="assets/Mug.gltf" auto-rotate auto-rotate-delay="0" rotation-per-second="200%" shadow-intensity="0.5" shadow-intensity="1" loading="lazy"></model-viewer>
+            <model-viewer class="model-viewer" alt="3D Model" src="assets/Mug.gltf" auto-rotate auto-rotate-delay="0" rotation-per-second="200%" shadow-intensity="0.5" shadow-intensity="1" loading="eager"></model-viewer>
         </div>
         
     </section>
