--- a/index.html
+++ b/index.html
@@ -9,6 +9,12 @@
     <script src="scripts.js"></script>
     <script type="module" src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"></script>
     <link rel="icon" href="/favicon.png">
+
+    <meta property="og:title" content="Truman Creative Co. | Brooklyn, NY" />
+    <meta type=“description” content="Design and Creative Services, Based in NYC" />
+    <meta property="og:type" content="website" />
+    <meta property="og:image" content="assets/og_image.png" />
+    <meta property="og:url" content="https://www.trumancreative.co" />
 </head>
 <body>
 
